--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,7 @@ workflows:
           requires:
             - test
           filters:
+            branches:
+              ignore: '/.*'
             tags:
-              only: 'noop'
+              only: '/^beta-.*/'
