Update tag regex

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^beta-.*/
+              only: /beta-.*/
