--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,11 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
+          tags:
+            only: /.*/
       - test:
+          tags:
+            only: /.*/
           requires:
               - build
       - deploy:
